# cpparseini

./: CMakeLists.txt  LICENSE  README.md  build.sh  meson.build  test.sh  xmake.lua
include/: cpparseini.hpp  utils.hpp
src/: cpparseini.cc  utils.cc
test/: CMakeLists.txt  meson.build  test_add_section.cc  test_display.cc  test_modify_section.cc  test_read_valid_line.cc  test_remove_section.cc  xmake.lua
test/fixtures/: config.ini
