executable('test_read_valid_line', 'test_read_valid_line.cc',
    dependencies: cpparseini_dep
)

executable('test_display', 'test_display.cc',
    dependencies: cpparseini_dep
)

executable('test_remove_section', 'test_remove_section.cc',
    dependencies: cpparseini_dep
)

executable('test_add_section', 'test_add_section.cc',
    dependencies: cpparseini_dep
)

executable('test_modify_section', 'test_modify_section.cc',
    dependencies: cpparseini_dep
)
